Wed Mar 29 2:50:31 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
 - megatec: get manufacturer/model/version information. Ressurected
   "ups.temperature". Increased the interval between chars on send.
 - man/megatec.8: added missing test.battery.start description.
 - docs/megatec.txt: documentation about the megatec driver (assimilation of
   the other similar drivers).

Wed Mar 22 20:51:32 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - mge-shut: remove the wrong ups.status setting to OB upon
   communication failure.

   [Alioth Bug #303257]

Tue Mar 21 21:54:34 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - configure.in, drivers/libhid.h, drivers/Makefile.in:
   add Solaris 10 support for newhidups (from Marty Lee and
   George A. Dowding)

Tue Mar 21 19:15:06 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - mge-utalk: add ESV 11+ to Si data table, though it's also
   supported by Si1

Fri Mar 17 12:15:34 EST 2006 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: fixed float/double mismatch in battery voltage

Thu Mar  9 19:32:00 2006 / Arjen de Korte <arjen@de-korte.org>

 - client/upsrw.c: swapped parameters in memset() call
 - drivers/tripplite_usb.c: off-by-one buffer overflow

Thu Mar  9 16:36:00 2006 / Arjen de Korte <arjen@de-korte.org>

 - common/common.c: sanity check for fatal()

Sat Mar  4 14:32:00 2006 / Arjen de Korte <arjen@de-korte.org>

 - drivers/safenet.c: increase timeout for reading replies from the UPS

Fri Mar  3 20:25:00 2006 / Arjen de Korte <arjen@de-korte.org>

 - common/common.c: handle problems with get_user_pwent() directly,
   instead of first returning to the caller

Fri Mar  3 09:42:46 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - common/common.c: set errno=ENOENT in get_user_pwent() if user not found

Mon Feb 27 19:23:24 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - mge-utalk, mge-shut, snmp-ups: remove the zero prefix on exposed
   data values
